add BACKGROUND AD image.

--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
         </div>
     </section>
     <!-- 
-        - #BACKGROUD AD
+        - #BACKGROUND AD
       -->
     <div class="back-ad">
         <a href="#" class="ad" target="_blank">
