修改背景廣告圖檔，與增加圖片填滿方式為contain

--- a/index.html
+++ b/index.html
@@ -861,11 +861,16 @@
     <!-- 
         - #BACKGROUND AD
       -->
-    <div class="back-ad">
+      <div class="adup">AD廣告內容開始</div>
+
+      <div class="back-ad">    
         <a href="#" class="ad" target="_blank">
-            <img src="./assets/banner1.png">
+            <img src="./assets/BackgroundAD.png">
         </a>
     </div>
+
+    <div class="adup">AD廣告內容結束</div>
+
 
     <!-- 
         - #COUNTDOWN
