針對圖片尺寸在768px以下或以上，做不同顯示方式但比較適當的調整

--- a/index.html
+++ b/index.html
@@ -863,13 +863,13 @@
       -->
       <div class="adup">AD廣告內容開始</div>
 
-      <div class="back-ad">    
+      <div class="back-ad"> 
         <a href="#" class="ad" target="_blank">
             <img src="./assets/BackgroundAD.png">
         </a>
     </div>
 
-    <div class="adup">AD廣告內容結束</div>
+    <div class="addown">AD廣告內容結束</div>
 
 
     <!-- 
