--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -78,6 +79,28 @@
         </div>
     </header>
 
+    <div class="buttom-nav">
+        <a href="#" class="buttom-nav__link">
+            <i class="material-icons buttom-nav__icon">dashboard</i>
+            <span class="buttom-nav__text">Dashboard</span>
+        </a>
+        <a href="#" class="buttom-nav__link buttom-nav__link--active">
+            <i class="material-icons buttom-nav__icon">person</i>
+            <span class="buttom-nav__text">Profile</span>
+        </a>
+        <a href="#" class="buttom-nav__link">
+            <i class="material-icons buttom-nav__icon">devices</i>
+            <span class="buttom-nav__text">Devices</span>
+        </a>
+        <a href="#" class="buttom-nav__link">
+            <i class="material-icons buttom-nav__icon">lock</i>
+            <span class="buttom-nav__text">Privacy</span>
+        </a>
+        <a href="#" class="buttom-nav__link">
+            <i class="material-icons buttom-nav__icon">settings</i>
+            <span class="buttom-nav__text">Settings</span>
+        </a>
+    </div>
 
     <!------------------------------------------------------------------------>
     <!-- 
@@ -861,9 +884,9 @@
     <!-- 
         - #BACKGROUND AD
       -->
-      <div class="adup">AD廣告內容開始</div>
+    <div class="adup">AD廣告內容開始</div>
 
-      <div class="back-ad"> 
+    <div class="back-ad">
         <a href="#" class="ad" target="_blank">
             <img src="./assets/BackgroundAD.png">
         </a>
