修改底部導覽列的寬度與陰影

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
@@ -80,25 +83,25 @@
     </header>
 
     <div class="buttom-nav">
-        <a href="#" class="buttom-nav__link">
-            <i class="material-icons buttom-nav__icon">dashboard</i>
-            <span class="buttom-nav__text">Dashboard</span>
+        <a href="#" class="buttom-nav-link">
+            <i class="material-icons buttom-nav-icon">dashboard</i>
+            <span class="buttom-nav-text">Dashboard</span>
         </a>
-        <a href="#" class="buttom-nav__link buttom-nav__link--active">
-            <i class="material-icons buttom-nav__icon">person</i>
-            <span class="buttom-nav__text">Profile</span>
+        <a href="#" class="buttom-nav-link buttom-nav-link--active">
+            <i class="material-icons buttom-nav-icon">person</i>
+            <span class="buttom-nav-text">Profile</span>
         </a>
-        <a href="#" class="buttom-nav__link">
-            <i class="material-icons buttom-nav__icon">devices</i>
-            <span class="buttom-nav__text">Devices</span>
+        <a href="#" class="buttom-nav-link">
+            <i class="material-icons buttom-nav-icon">devices</i>
+            <span class="buttom-nav-text">Devices</span>
         </a>
-        <a href="#" class="buttom-nav__link">
-            <i class="material-icons buttom-nav__icon">lock</i>
-            <span class="buttom-nav__text">Privacy</span>
+        <a href="#" class="buttom-nav-link">
+            <i class="material-icons buttom-nav-icon">lock</i>
+            <span class="buttom-nav-text">Privacy</span>
         </a>
-        <a href="#" class="buttom-nav__link">
-            <i class="material-icons buttom-nav__icon">settings</i>
-            <span class="buttom-nav__text">Settings</span>
+        <a href="#" class="buttom-nav-link">
+            <i class="material-icons buttom-nav-icon">settings</i>
+            <span class="buttom-nav-text">Settings</span>
         </a>
     </div>
 
@@ -131,6 +134,8 @@
         - #BACKTOTOP
       -->
     <div id="backToTop"><i class="fa fa-arrow-up"></i></div>
+    <!-- <div id="backToTop"><i class="fa-regular fa-house"></i></div> -->
+    
 
     <!------------------------------------------------------------------------>
 
