調整底部導覽列圖示與大小顏色

--- a/index.html
+++ b/index.html
@@ -84,24 +84,24 @@
 
     <div class="buttom-nav">
         <a href="#" class="buttom-nav-link">
-            <i class="material-icons buttom-nav-icon">dashboard</i>
-            <span class="buttom-nav-text">Dashboard</span>
+            <i class="fa-solid fa-bars"></i>
+            <span class="buttom-nav-text">Menu</span>
         </a>
         <a href="#" class="buttom-nav-link buttom-nav-link--active">
-            <i class="material-icons buttom-nav-icon">person</i>
-            <span class="buttom-nav-text">Profile</span>
+            <i class="fa-solid fa-bag-shopping"></i>
+            <span class="buttom-nav-text">Shopping</span>
         </a>
         <a href="#" class="buttom-nav-link">
-            <i class="material-icons buttom-nav-icon">devices</i>
-            <span class="buttom-nav-text">Devices</span>
+            <i class="fa-solid fa-house-chimney-window"></i>
+            <span class="buttom-nav-text">Home</span>
         </a>
         <a href="#" class="buttom-nav-link">
-            <i class="material-icons buttom-nav-icon">lock</i>
-            <span class="buttom-nav-text">Privacy</span>
+            <i class="fa-solid fa-user"></i>
+            <span class="buttom-nav-text">User</span>
         </a>
         <a href="#" class="buttom-nav-link">
-            <i class="material-icons buttom-nav-icon">settings</i>
-            <span class="buttom-nav-text">Settings</span>
+            <i class="fa-solid fa-qrcode"></i>
+            <span class="buttom-nav-text">Info.</span>
         </a>
     </div>
 
@@ -1152,6 +1152,7 @@
         <!--  ionicon link  -->
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+        <script src="https://kit.fontawesome.com/24f2ea7b2b.js" crossorigin="anonymous"></script>
 
 </body>
 
